--- a/package.json
+++ b/package.json
@@ -20,8 +20,13 @@
   "homepage": "https://github.com/Krister-Johansson/XMLTest#readme",
   "dependencies": {
     "axios": "^0.27.2",
+    "chalk": "^5.0.1",
     "express": "^4.18.1",
-    "fast-xml-parser": "^4.0.9"
+    "fast-xml-parser": "^4.0.9",
+    "pug": "^3.0.2",
+    "xml": "^1.0.1",
+    "xml-js": "^1.6.11",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "chai": "^4.3.6",
